--- a/new-pk/src/app/components/about/about.component.html
+++ b/new-pk/src/app/components/about/about.component.html
@@ -7,6 +7,6 @@
 <div class="container">
   <h3 class="text-center">What I can do?</h3>
   <h5 class="text-center">Develope what you need.</h5>
-  <p>I am a full stack develoer, so I know how to create your website to run across devices using the latest technologies available.</p>
+  <p>I am a full stack develoer, so I know how to create your website to run across devices.</p>
   <p>Also, I have experience developing mobile app using hybrid platform.</p>
 </div>
