--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -1,12 +1,12 @@
 // Bootstrap overrides for this template
-a {
-  color: $primary;
-  &:focus,
-  &:hover,
-  &:active {
-    color: darken($primary, 10%);
-  }
-}
+// a {
+//   color: $primary;
+//   &:focus,
+//   &:hover,
+//   &:active {
+//     color: darken($primary, 10%);
+//   }
+// }
 
 .btn {
   border-width: 2px;
