--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -22,6 +22,9 @@ header.masthead {
     h2 {
       font-size: 1.75em;
     }
-
   }
+}
+
+.bg-freelancer-header{
+  background: #0d1321 !important;
 }
