--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,6 +12,6 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
-$primary: #18BC9C !default;
+$primary: #2f70a1 !default;
 $secondary: #2C3E50 !default;
 $header: #0d1321 !default;
