--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -56,18 +56,28 @@ hr {
   text-align: center;
   border: none;
   border-top: solid 0.25rem;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  // margin-top: 0.5rem;
+  // margin-bottom: 0.5rem;
 }
 
 hr.name {
   max-width: 20rem;
-  padding: 0;
-  text-align: center;
-  border: none;
-  border-top: solid 0.25rem;
+  // padding: 0;
+  // text-align: center;
+  // border: none;
+  // border-top: solid 0.25rem;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+
+hr.skills {
+  max-width: 6rem;
+  // padding: 0;
+  // text-align: center;
+  // border: none;
+  // border-top: solid 0.25rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 // Section Padding Settings
@@ -111,4 +121,10 @@ section {
     background-color: fade-out($gray-900, 0.5);
     line-height: 3.1rem;
   }
+}
+
+.img-circle {
+  max-width: 256px;
+  max-height: 256px;
+  border-radius: 10%;
 }
