--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -79,6 +79,26 @@ section h2 {
   border-radius: 10%;
 }
 
+.jumbotron-important {
+  border: 0.1rem solid rgba(233, 236, 239, 0.5);
+  border-radius: 0.3rem;
+  padding: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background-color: #e9ecef;
+}
+
+.jumbotron-not-important {
+  border: 0.1rem solid rgba(222, 226, 230, 0.5);
+  border-radius: 0.3rem;
+  padding-left: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-right: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
