--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -128,3 +128,23 @@ section {
   max-height: 256px;
   border-radius: 10%;
 }
+
+.jumbotron-important {
+  border: 0.1rem solid fade-out($gray-200, 0.5);
+  border-radius: 0.3rem;
+  padding: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background-color: $gray-200;
+}
+
+.jumbotron-not-important {
+  border: 0.1rem solid fade-out($gray-300, 0.5);
+  border-radius: 0.3rem;
+  padding-left: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-right: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
